<resources>
    <string name="app_name">SchoolDiary</string>
    <string name="history">History</string>
    <string name="literature">Literature</string>
    <string name="physical_education">Physical Education</string>
    <string name="physics">Physics</string>
    <string name="biology">Biology</string>
    <string name="mathematics">Mathematics</string>
    <!--navigation_view-->
    <string name="home">Home</string>
    <string name="classes">Classes</string>
    <string name="notes">Notes</string>
    <string name="marks">Marks</string>
    <!--home_fragment-->
    <string name="hello">Hi, Helen!</string>
    <string name="homeworks">Homeworks</string>
    <string name="exam">Are you ready for exams?</string>
    <string name="default_time">0</string>
    <string name="colon">:</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <!--class_card_view-->
    <string name="video_open">Open in</string>
    <string name="time_class">%s - %s"</string>
    <string name="number_classes_today">%s classes today</string>
    <string name="teacher">Teacher: %s</string>
    <string name="today">Today, %s</string>
    <!--homework_card_view-->
    <string name="day_before_deadline">%s days left</string>
    <string name="one_day_before_deadline">1 day left</string>
    <string name="mike">Mike</string>
    <string name="bob">Bob</string>
    <string name="mishel">Mishel</string>
</resources>