<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/baseline_apps_24"
        android:contentDescription="@string/home"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/classes"
        android:title="@string/classes"
        android:icon="@drawable/baseline_calendar_today_24"
        android:contentDescription="@string/classes"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/notes"
        android:title="@string/notes"
        android:icon="@drawable/baseline_format_list_bulleted_24"
        android:contentDescription="@string/notes"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/favourites"
        android:title="@string/marks"
        android:icon="@drawable/baseline_star_outline_24"
        android:contentDescription="@string/marks"
        app:showAsAction="ifRoom"
        />

</menu>