<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/menu_card_view"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/menu_card_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_menu_card_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_guide_line_25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_guide_line_50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_guide_line_75"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/home_card_view"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_item_menu_card_view"
                style="@style/MenuCardViewStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guide_line_25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="invisible">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:tint="@color/green_blue"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/vertical_guide_line_25"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/baseline_apps_24" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MenuTextStyle"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:text="@string/home"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/home_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guide_line_25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_apps_24" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/classes_card_view"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_item_menu_card_view"
                style="@style/MenuCardViewStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guide_line_50"
                app:layout_constraintStart_toStartOf="@id/vertical_guide_line_25"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="invisible">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:tint="@color/green_blue"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/vertical_guide_line_25"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/baseline_calendar_today_24" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MenuTextStyle"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:text="@string/classes"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/classes_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guide_line_50"
                app:layout_constraintStart_toStartOf="@+id/vertical_guide_line_25"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_calendar_today_24" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/notes_card_view"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_item_menu_card_view"
                style="@style/MenuCardViewStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guide_line_75"
                app:layout_constraintStart_toStartOf="@id/vertical_guide_line_50"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="invisible">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:tint="@color/green_blue"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/vertical_guide_line_25"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/baseline_format_list_bulleted_24" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MenuTextStyle"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:text="@string/notes"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/notes_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guide_line_75"
                app:layout_constraintStart_toStartOf="@+id/vertical_guide_line_50"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_format_list_bulleted_24" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/marks_card_view"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_item_menu_card_view"
                style="@style/MenuCardViewStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/vertical_guide_line_75"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="invisible">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:tint="@color/green_blue"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/vertical_guide_line_25"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/baseline_calendar_today_24" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MenuTextStyle"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:text="@string/marks"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/marks_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/vertical_guide_line_75"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_star_outline_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>